[package]
name = "gba_clock"
version = "0.3.1"
authors = ["Anders Evensen"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/gba_clock"
description = "A real-time clock library for the GBA."
categories = ["date-and-time", "game-development", "no-std", "no-std::no-alloc"]
keywords = ["gba", "rtc", "clock", "time", "date"]

[dependencies]
deranged = {version = "0.3.8", default-features = false}
serde = {version = "1.0.188", default-features = false, optional = true}
time = {version = "0.3.27", default-features = false}

[dev-dependencies]
claims = "0.7.1"

[features]
serde = ["dep:serde", "deranged/serde", "time/serde"]
